// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserComponent When rendering Then it matches snapshot (no user provided) 1`] = `
DebugElement {
  "nativeNode": <div
    id="root1"
  >
    
  </div>,
}
`;

exports[`UserComponent When rendering Then it matches snapshot (user provided) 1`] = `
DebugElement {
  "nativeNode": <div
    id="root2"
  >
    <em>
       fl 
    </em>
    <span>
       firstName lastName 
    </span>
    
    
  </div>,
}
`;
